# act_eye_extractor

./: CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
examples/: new_variable_example.py
src/eye_extractor/: __init__.py  build_table.py  clickargs.py  corpusio.py  extract.py  headers.py  iop.py  laterality.py  patterns.py  sections.py  utils.py
src/eye_extractor/amd/: __init__.py  algorithm.py  amd.py  cnv.py  cyst.py  drusen.py  dry.py  fluid.py  ga.py  lasertype.py  ped.py  pigment.py  scar.py  srh.py  utils.py  vitamins.py  wet.py
src/eye_extractor/builders/: build_history.py
src/eye_extractor/cataract/: algorithm.py  cataract.py  cataract_surgery.py  cataract_type.py  intraocular_lens.py  posterior_cap_opacity.py
src/eye_extractor/common/: date.py  get_variable.py  json.py  negation.py  noteinfo.py  overlap.py  regex.py  safeget.py  section.py  severity.py  shared_patterns.py  string.py
src/eye_extractor/debug/: find_patterns_in_corpus.py
src/eye_extractor/dr/: binary_vars.py  cmt_value.py  cws.py  diabetic_retinopathy.py  dme_yesno.py  dr_tx.py  dr_type.py  dr_yesno.py  (+8 more)
test/: README.md  test_cataract.py  test_character_groups.py  test_date.py  test_drusen.py  test_example.py  test_iop.py  test_laterality.py  test_negation.py  test_pigment.py  test_srh.py  test_va.py
test/amd/: test_amd.py  test_cnv.py  test_cyst.py  test_drusen.py  test_dry.py  test_fluid.py  test_ga.py  test_lasertype.py  test_ped.py  test_pigment.py  test_scar.py  test_srf.py  test_srh.py  test_vitamin.py  test_wet.py
test/cataract/: test_cataract.py  test_cataract_surgery.py  test_cataract_type.py  test_intraocular_lens.py  test_posterior_cap_opacity.py
test/common/: test_antivegf.py  test_dry_severity.py  test_macula_wnl.py  test_noteinfo.py  test_severity.py  test_wetseverity.py
test/dr/: test_binary_vars.py  test_build_diabetic_retinopathy.py  test_cmt_value.py  test_cws.py  test_diabetic_retinopathy.py  test_diabetic_retinopathy_pattern.py  test_dme_tx.py  test_dme_yesno.py  test_dr_fluid.py  test_dr_tx.py  test_dr_type.py  test_dr_yesno.py  test_exudates.py  test_fluid.py  test_get_diabetic_retinopathy.py  test_hemorrhage_type.py  test_irma.py  test_laser_scar_type.py  test_nv_types.py  test_peripheral.py  test_ret_micro.py  test_venous_beading.py
test/exam/: test_cmt.py  test_cup_disk_ratio.py  test_rnfl.py
test/glaucoma/: test_cct.py  test_disc_hemorrhage.py  test_disc_notch.py  test_disc_pallor.py  test_exfoliation.py  test_glaucoma_drops.py  test_glaucoma_dx.py  test_gonio.py  test_gonioo.py  test_ppa.py  test_preglaucoma.py  test_tilted_disc.py  test_tx.py
test/hx/: test_famhx.py  test_hx.py  test_perhx.py
test/nlp/: test_inline_section.py  test_negation.py
test/rao/: test_rao.py
test/ro/: test_rao.py  test_rvo.py
test/sections/: test_headers.py  test_oct_macula.py
test/uveitis/: test_uveitis.py
test/va/: test_iop.py  test_keratometry.py  test_va.py
(+83 files in other folders)
