[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'eye_extractor'
version = '20220822'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
homepage = 'https://github.com/dcronkite/eye_extractor'
requires = [
    'loguru',
    'click',
    'python-dateutil',
    'sortedcontainers',
]
keywords = ['nlp', 'eye', 'ophthalmology', 'optometry']
requires-python = '>=3.10'
readme = 'README.md'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 1 - Planning',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Intended Audience :: Science/Research',
]

[project.optional-dependencies]
dev = ['pytest']
