[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'eye_extractor'
version = '20221031'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
homepage = 'https://github.com/kpwhri/act_eye_extractor'
dependencies = [
    'loguru',
    'click',
    'python-dateutil',
    'sortedcontainers',
]
keywords = ['nlp', 'eye', 'ophthalmology', 'optometry']
requires-python = '>=3.10'
readme = 'README.md'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
]

[project.optional-dependencies]
dev = ['pytest']
