[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'eye_extractor'
dynamic = ['version', 'description']
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
dependencies = [
    'loguru',
    'click',
    'python-dateutil',
    'sortedcontainers',
]
keywords = ['nlp', 'eye', 'ophthalmology', 'optometry']
requires-python = '>=3.10'
readme = 'README.md'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
]

[project.optional-dependencies]
dev = ['pytest']

[project.scripts]
eyex-lookup = "eye_extractor.tools.lookup:main"
eyex-lookup-jsonl = "eye_extractor.tools.search_jsonl:main"
eyex-extract-build = "eye_extractor.tools.extract_and_build:extract_and_build"
eyex-run-function = "eye_extractor.tools.run_function_on_text:run_function_on_file"

[project.urls]
Home = 'https://github.com/kpwhri/act_eye_extractor'
